# micro-videos

./: .env  .gitignore  .pdm-python  .pylintrc  Dockerfile  README.md  api.http  docker-compose.yaml  pyproject.toml  pytest.ini  readme.md
.devcontainer/: devcontainer.json
src/__seedwork/application/: dto.py  use_cases.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_use_cases.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/core/__seedwork/application/: dto.py  use_cases.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/core/__seedwork/infra/: serializers.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  entities_faker_builder.py  repositories.py  validators.py
src/core/category/infra/: repositories.py
src/core/category/tests/: helpers.py
src/django_app/: README.md  __init__.py  container.py  manage.py  settings.py  test_fixtures.py  urls.py
src/django_app/django_app/: asgi.py  settings.py  urls.py  wsgi.py
uml/: class-diagram.wsd
uml/usecases/: category.usecase.wsd
(+44 files in other folders)
