[project]
name = "micro-videos"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Carlos", email = "carlos.oe.cc@gmail.com"},
]
dependencies = [
    "autopep8>=2.3.1",
    "pytest>=8.3.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
