[project]
name = "micro-videos"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Carlos",email = "carlos.oe.cc@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.15.2",
    "django>=5.1.1",
    "django-extensions>=3.2.3",
    "dependency-injector>=4.42.0",
    "pytest-django>=4.9.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.3.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "pylint>=3.3.1",
    "model-bakery>=1.19.5",
    "faker>=30.3.0",
]

[tool.pdm.scripts]
manage="python ./src/django_app/manage.py"
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
runserver = "python ./src/django_app/manage.py runserver"
test = "pytest -s --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"
test_e2e = "pdm run test --group e2e"
test_e2e_cov = "pdm run test_cov --group e2e"